# taskManagerCli

./: README.md  cli_AST_report.txt  cli_pydantic_runtime_annotation_report.txt  monkeytype_stub_task_manager.txt  righttyper.out  task_manager_AST_report.txt  task_manager_conditional_runtime_annotation_report.txt  type_info.json
Task_Manager/: pyproject.toml
Task_Manager/task_manager/: __init__.py  cli.py  task_manager.py  tasks.json
Task_Manager/task_manager.egg-info/: PKG-INFO  SOURCES.txt
